# ZEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Sandbox/: Scene.hpp
Sandbox/DemoScenes/: DemoClearColor.cpp  DemoClearColor.hpp  DemoCube.cpp  DemoCube.hpp  DemoRainbowTriangle.cpp  DemoRainbowTriangle.hpp  DemoTexture2D.cpp  DemoTexture2D.hpp  DemoTriangle.cpp  DemoTriangle.hpp
ZEN/: CMakeLists.txt  GLUtils.cpp  GLUtils.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  zen.h
res/shaders/: Basic.shader  BasicColoredVertex.shader  Texture.shader
